# nvidb

./: .gitignore  LICENSE  README.md  config.example.yml  example_interactive.py  pyproject.toml  requirements.txt  setup.py  test.sh
.github/workflows/: python-publish.yml  release.yml
nvidb/: __init__.py  config.py  connection.py  data_modules.py  logger.py  monitor.py  utils.py  web.py
nvidb/.streamlit/: config.toml
nvidb/src/: connection.py  data_modules.py  utils.py
nvidb/test/: run.py
src/: connection.py  data_modules.py
test/: run.py  sample.yaml  test.sh
